--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,7 +7,11 @@
     <label for="password">Password:</label>
     <input type="password" name="password">
   </div>
+
+  {{> flashMessage}} 
+  {{!-- this the name of the partial file--}}
+   
   <div>
-    <input type="submit" value="Log In">
+    <button type="submit" >Log In</button>
   </div>
 </form>
