--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="/stylesheets/style.css" />
 </head>
 <body>
+<nav>
+  <ul>
+    <li><a href="/login">LOGIN</a></li>
+    <li><a href="/signup">SING IN</a></li>
 
+  </ul>
+</nav>
   {{{body}}}
 
   <script src="/javascripts/script.js"></script>
