User is redirectt

--- a/views/partials/flashMessage.hbs
+++ b/views/partials/flashMessage.hbs
@@ -1,5 +1,6 @@
-{{#if message}}
-  {{#each message}}
-    {{ this}}
-  {{/each}}
-{{/if}}
+<div>{{#if message}}
+      {{!--#each message--}}
+        {{this}}
+      {{!--/each--}}
+     {{/if}}
+</div>
