--- a/views/call-log/newCall.hbs
+++ b/views/call-log/newCall.hbs
@@ -1,72 +1,87 @@
 
 <h1>STAR MICRONICS</h1>
-<from  action="/addlog" method="POST">
-<select name="printer">
-{{#each printerFromDB}}
-    <option value={{this._id}}>{{this.printer}}</option>
-{{/each}}
-</select>
-<label for="">Interface</label>
-<select name="interface">
-    <option value="Lan">Lan</option>
-    <option value="USB">USB</option>
-    <option value="WIFI">WIFI</option>
-    <option value="Bluetooth">Bluetooth</option>
-    <option value="CloudPRNT">CloudPRNT</option>
-    <option value="WebPRNT">WebPRNT</option>
-</select>
-<label for="">Device</label>
-<select name="device">
-    <option value="Windows">Windows</option>
-    <option value="Mac">Mac</option>
-    <option value="iOS">iOS</option>
-    <option value="Android">Android</option>
-    <option value="Linux">Linux</option>
-</select>
-<label for ="">POs</label>
-<select name="pos">
-    <option value="None">None</option>
-    <option value="Square">Square</option>
-    <option value="Uber Eats">Uber Eats</option>
-    <option value="Touch Bistro">Touch Bistro</option>
-    <option value="LightSpeed">Android</option>
-    <option value="Quickbooks">Quickbooks</option>
-    <option value="Mindbody">Mindbody</option>
-    <option value="Shopify">Shopify</option>
-    <option value="Vend">Vend</option>
-    <option value="ForUP">Uber Eats</option>
-    <option value="GrubHub">Touch Bistro</option>
-    <option value="Vagaro">Vagaro</option>
-    <option value="Millennium">Millennium</option>
-    <option value="Booker">Booker</option>
-    <option value="Rain POS">Rain POS</option>
-    <option value="Postmates">Vend</option>
-    <option value="Lavu">Lavu</option>
-    <option value="Opentable">Opentable</option>
-    <option value="ChowNow">ChowNow</option>
-    <option value="MJ Freeway">MJ Freeway</option>
-    <option value="DoorDash">DoorDash</option>
-    <option value="PayTrace">PayTrace</option>
-    <option value="Salon Touch">Salon Touch</option>
-    <option value="Adello">Adello</option>
-    <option value="Clover">Clover</option>
-    <option value="New">NEW</option>
-   
-</select>
-<label for="">Observation</label> 
-<input name="observation" value="" >
+<div><h1>Welcome {{currentUser.username}}</h1></div>
+<form  action="/newCallog"method="POST">
+        <select name="printer">
+        {{#each printerFromDB}}
+            <option value={{this._id}}>{{this.printer}}</option>
+        {{/each}}
+        </select>
+        <label for="">Interface</label>
+        <select name="interface">
+            <option value="Lan">Lan</option>
+            <option value="USB">USB</option>
+            <option value="WIFI">WIFI</option>
+            <option value="Bluetooth">Bluetooth</option>
+            <option value="CloudPRNT">CloudPRNT</option>
+            <option value="WebPRNT">WebPRNT</option>
+        </select>
+        <label for="">Device</label>
+        <select name="device">
+            <option value="Windows">Windows</option>
+            <option value="Mac">Mac</option>
+            <option value="iOS">iOS</option>
+            <option value="Android">Android</option>
+            <option value="Linux">Linux</option>
+        </select>
+        <label for ="">POs</label>
+        <select name="pos">
+            <option value="None">None</option>
+            <option value="Square">Square</option>
+            <option value="Uber Eats">Uber Eats</option>
+            <option value="Touch Bistro">Touch Bistro</option>
+            <option value="LightSpeed">Android</option>
+            <option value="Quickbooks">Quickbooks</option>
+            <option value="Mindbody">Mindbody</option>
+            <option value="Shopify">Shopify</option>
+            <option value="Vend">Vend</option>
+            <option value="ForUP">Uber Eats</option>
+            <option value="GrubHub">Touch Bistro</option>
+            <option value="Vagaro">Vagaro</option>
+            <option value="Millennium">Millennium</option>
+            <option value="Booker">Booker</option>
+            <option value="Rain POS">Rain POS</option>
+            <option value="Postmates">Vend</option>
+            <option value="Lavu">Lavu</option>
+            <option value="Opentable">Opentable</option>
+            <option value="ChowNow">ChowNow</option>
+            <option value="MJ Freeway">MJ Freeway</option>
+            <option value="DoorDash">DoorDash</option>
+            <option value="PayTrace">PayTrace</option>
+            <option value="Salon Touch">Salon Touch</option>
+            <option value="Adello">Adello</option>
+            <option value="Clover">Clover</option>
+            <option value="New">NEW</option>
+        
+        </select>
+        <label for="">Observation</label> 
+        <input type="text" name="observation" value="" >
 
-<button type="submit"> Submit</button>
+         <div>
+                <button type="submit" >Submit</button>
+         </div>
 </from>
 <br>
 <br>
 <br>
-<td ><h2>
+<td><h2>
     <tr>Date</tr>
+    <tr>Username</tr>
     <tr>Printer</tr>
     <tr>Interface</tr>
     <tr>Device</tr>
     <tr>POS</tr>
-    <tr>Printer</tr>
     <tr>Observation</tr></h2>
+</td>
+<td>
+    {{#each callsFromDB}}
+    <tr>{{this.createdAt}}</tr>
+    <tr>{{this.representative.username}}</tr>
+    <tr>{{this.printer.printer}}</tr>
+    <tr>{{this.interface}}</tr>
+    <tr>{{this.device}}</tr>
+    <tr>{{this.pos}}</tr>
+    <tr>{{this.observation}}</tr>
+  
+    {{/each}}
 </td>
