--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,9 +10,13 @@
 <body>
 <nav>
   <ul>
+    {{#if currentUser}}
+         <div><a href="/logout">SIGN OUT</a></div>
+         
+    {{else}}
     <li><a href="/login">LOGIN</a></li>
     <li><a href="/signup">SING IN</a></li>
-
+    {{/if}}
   </ul>
 </nav>
   {{{body}}}
