--- a/views/admin/adminDashboard.hbs
+++ b/views/admin/adminDashboard.hbs
@@ -1,5 +1,5 @@
 <h1>Welcome Admin</h1>
-<table>
+<table id="customers" class="col-lg-8 col-lg-offset-2">
   <tr>
     <th>Name</th>
     <th>Last Name</th>
