--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,21 +1,44 @@
-<h2>Signup</h2>
 
-<form action="/signup" method="POST" id="form-container">
-  <label for="username">Username</label>
-  <input id="username" type="text" name="username" placeholder="JonSnow">
-  <br><br>
-  <label for="password">Password</label>
-  <input id="password" type="password" name="password" placeholder="Your password">
+<div class="container">
 
-  {{#if message}}
-    <div class="error-message">{{ message }}</div>
-  {{/if}}
-  <br><br>
+<div class="row" style="margin-top:20px">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+		<form role="form"action="/signup" method="POST">
+			<fieldset>
+				<h2>Please Register</h2>
+				<hr class="colorgraph">
+				<div class="form-group">
+          <input type="text" name="name" id="name" class="form-control input-lg" placeholder="Name" required data-error="Please, Add Name.">
+			    <div class="help-block with-errors"></div>
+      	</div>
+        
+        <div class="form-group">
+                    <input type="text" name="lastName" id="password" class="form-control input-lg" placeholder="Lastname" required data-error="Please, Add Name.">
+			    <div class="help-block with-errors"></div>
+				</div>
+        	<div class="form-group">
+                    <input type="text" name="email" id="email" class="form-control input-lg" placeholder="Email" required data-error="Please, Add Name.">
+			    <div class="help-block with-errors"></div>
+				</div>
+				<div class="form-group">
+                    <input type="text" name="username" id="password" class="form-control input-lg" placeholder="Username" required data-error="Please, Add Name.">
+			    <div class="help-block with-errors"></div>
+				</div>
+        <div class="form-group">
+                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Password" required data-error="Please, Add Name.">
+			    <div class="help-block with-errors"></div>
+				</div>
+				<hr class="colorgraph">
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6">
+             {{> flashMessage}} 
+             {{!-- this the name of the partial file--}}
+                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Register">
+					</div>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+</div>
 
-  <button>Create account</button>
-
-  <p class="account-message">
-    Do you already have an account?
-    <a href="/login">Login</a>
-  </p>
-</form>
+</div>
