--- a/views/call-log/newCall.hbs
+++ b/views/call-log/newCall.hbs
@@ -16,7 +16,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="form_name">Printer *</label>
-                <select name="printer" class="form-control">
+                <select name="printer" class="form-control form-control-lg">
                     {{#each printerFromDB}}
                         <option value= {{this._id}}>{{this.printer}}</option>
                     {{/each}}
@@ -26,7 +26,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="form_lastname">Interface *</label>
-                <select name="interface" class="form-control">
+                <select name="interface" class="form-control form-control-lg">
                     <option value="Lan">Lan</option>
                     <option value="USB">USB</option>
                     <option value="WIFI">WIFI</option>
@@ -42,7 +42,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="form_email">Device *</label>
-                    <select name="device" class="form-control">
+                    <select name="device" class="form-control form-control-lg">
                         <option value="Windows">Windows</option>
                         <option value="Mac">Mac</option>
                         <option value="iOS">iOS</option>
@@ -55,7 +55,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="form_phone">POS</label>
-                <select name="pos" class="form-control">
+                <select name="pos" class="form-control form-control-lg">
                     <option value="None">None</option>
                     <option value="Square">Square</option>
                     <option value="Uber Eats">Uber Eats</option>
