--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,9 @@
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,400,700'>
   <link rel="stylesheet" href="/stylesheets/style.css" />
+    
+  <!-- <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script> jQuery -->
+   
 </head>
 <body>
 <nav>
@@ -25,7 +28,7 @@
 <hr>
 {{#if currentUser.privilage}}
 <div class="col-sm-2">
-  <div>Reports</div>
+  <div><a href="/reports">Reports</a></div>
   <div>User</div>
 </div>
 <div class="col-sm-10">
@@ -37,8 +40,8 @@
 
 {{/if}}
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
-  <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js'></script>
   <script src="/javascripts/script.js"></script>
+  
 </body>
 </html> 
