reports and redirect page for admin

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,10 +26,10 @@
   
 </nav>
 <hr>
-{{#if currentUser.privilage}}
+{{#if currentUser.privi}}
 <div class="col-sm-2">
   <div><a href="/reports">Reports</a></div>
-  <div>User</div>
+  <div><a href="/users">User</a></div>
 </div>
 <div class="col-sm-10">
   {{{body}}}
