--- a/views/admin/searchReport.hbs
+++ b/views/admin/searchReport.hbs
@@ -1,9 +1,9 @@
 
-
+   <div class="col-md-12 "><h1>CREATE REPORTS
+</h1></div>
+  <br><br><br>
+  <hr class="colorgraph">
   <div class="row">
-    <h1> REPORTS</h1>
-  </div>
-   <div class="row">
   <div class="col-lg-8 col-lg-offset-2">
      <form id="contact-form" action="/search/date" method="POST" role="form">
         <div class="messages"></div>
@@ -12,13 +12,13 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label >Star Date</label>
-                  <input type="date" name="starDate" max="3000-12-31"  min="1000-01-01" class="form-control">
+                  <input type="date" name="starDate" max="3000-12-31"  min="1000-01-01" value="{{infArray.[0]}}"class="form-control" required data-error="Please, Add Star date.">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
                 <label >End Date</label>
-                  <input type="date" name="endDate" max="3000-12-31"  min="1000-01-01" class="form-control">
+                  <input type="date" name="endDate" max="3000-12-31"  min="1000-01-01" value="{{infArray.[1]}}"class="form-control" required data-error="Please, Add End date.">
               </div>
             </div>
           </div>  
@@ -28,7 +28,12 @@
                 <select name="printer" class="form-control form-control-lg">
                         <option value="">=== PRINTER ===</option>
                         {{#each listPrinter}}
-                           <option value= {{this._id}}>{{this.printer}}</option>
+                          {{#if_eq this._id ../infArray.[2] }}
+                            <option value= {{this._id}} selected>{{this.printer}}</option>
+                          {{else}}
+                            <option value= {{this._id}}>{{this.printer}}</option>
+                          {{/if_eq}}
+
                         {{/each}}
                 </select>
                 </div>
@@ -38,6 +43,9 @@
             <div class="col-md-12">
               <div class="form-group">
                <select name="interface" class="form-control form-control-lg">
+                 {{#if infArray.[3]}}
+                  <option value="{{infArray.[3]}}" selected>{{infArray.[3]}}</option>
+                 {{/if}}
                     <option value="">=== INTERFACE ===</option>
                     <option value="Lan">Lan</option>
                     <option value="USB">USB</option>
@@ -45,6 +53,7 @@
                     <option value="Bluetooth">Bluetooth</option>
                     <option value="CloudPRNT">CloudPRNT</option>
                     <option value="WebPRNT">WebPRNT</option>
+                  
                  </select>
                 <div class="help-block with-errors"></div>
               </div>
@@ -54,6 +63,9 @@
             <div class="col-md-12">
               <div class="form-group">
                      <select name="device" class="form-control form-control-lg">
+                       {{#if infArray.[4]}}
+                        <option value="{{infArray.[4]}}" selected>{{infArray.[4]}}</option>
+                        {{/if}}
                         <option value="">=== DEVICE ===</option>
                         <option value="Windows">Windows</option>
                         <option value="Mac">Mac</option>
@@ -69,6 +81,9 @@
             <div class="col-md-12">
               <div class="form-group">
                     <select name="pos" class="form-control form-control-lg">
+                    {{#if infArray.[5]}}
+                         <option value="{{infArray.[5]}}" selected>{{infArray.[5]}}</option>
+                     {{/if}} 
                     <option value="">=== POS ===</option>
                     <option value="Square">Square</option>
                     <option value="Uber Eats">Uber Eats</option>
@@ -114,33 +129,28 @@
   <br>
 <hr>
 <!-- ,-->
-<table id="customers" class="col-lg-8 col-lg-offset-2">
-  <div class="col-md-12">{{#each infArray}}
-                          {{this}}
-                          {{/each}}
-  </div>
-    <tr>
-        <h2>
-            <th>DATE</th>
-            <th>USERNAME</th>
-            <th>PRINTER</th>
-            <th>INTERFACE</th>
-            <th>DEVICE</th>
-            <th>POS</th>
-            <th>OBSERVATION</th>
-         </h2>
-    </tr>
+<table id="table" class="col-lg-12 table table-striped">
+  <thead>
+      <tr>
+          <th><h2>DATE</h2></th>
+          <th><h2>USERNAME</h2></th>
+          <th><h2>PRINTER</h2></th>
+          <th><h2>INTERFACE</h2></th>
+          <th><h2>DEVICE</h2></th>
+          <th><h2>POS</h2></th>
+          <th><h2>OBSERVATION</h2></th>
+      </tr>
+    </thead>
     {{#each callLog}}
-        <tr>  
-            <th>{{this.createdAt}}</th>
-            <th>{{this.representative.username}}</th>
-            <th>{{this.printer.printer}}</th>
-            <th>{{this.interface}}</th>
-            <th>{{this.device}}</th>
-            <th>{{this.pos}}</th>
-            <th>{{this.observation}}</th>
-           
-        </tr> 
+       <tr>  
+         <th>{{this.createdAt}}</th>
+         <th>{{this.representative.username}}</th>
+         <th>{{this.printer.printer}}</th>
+         <th>{{this.interface}}</th>
+         <th>{{this.device}}</th>
+        <th>{{this.pos}}</th>
+        <th>{{this.observation}}</th>
+       </tr> 
      {{/each}}
 
 </table>
