--- a/views/admin/adminDashboard.hbs
+++ b/views/admin/adminDashboard.hbs
@@ -1,24 +1,31 @@
 
-<table id="customers" class="col-lg-8 col-lg-offset-2">
-  <tr>
-    <th>Name</th>
-    <th>Last Name</th>
-    <th>Usernamme</th>
-    <th>Privilage</th>
-    <th>Active</th>
-    <th>Edit</th>
+<div class="col-md-12 "><h1>USERS</h1></div>
+  <br><br><br>
+  <hr class="colorgraph">
+<div class="container">
+  <table id="table" class="col-lg-12 table table-striped">
+    <thead>
+      <tr>
+        <th><h2>Name</h2></th>
+        <th><h2>Last Name</h2></th>
+        <th><h2>Username</h2></th>
+        <th><h2>Privilage</h2></th>
+        <th><h2>Active</h2></th>
+        <th><h2>Edit</h2></th>
+      </tr>
+    </thead>
+  {{#each listUser}}
+    <tr>
+      <th>{{this.name}}</th>
+      <th>{{this.lastName}}</th>
+      <th>{{this.username}}</th>
+      <th>{{this.privilage}}</th>
+      <th>{{this.active}}</th>
+      <form action ="/edit/{{this._id}}" method="POST">  
+      <th><button type="submit">Edit</button></th>
+    </form>
+    </tr>
+  {{/each}}
+  </table>
 
-  </tr>
-{{#each listUser}}
-  <tr>
-    <th>{{this.name}}</th>
-    <th>{{this.lastName}}</th>
-    <th>{{this.username}}</th>
-    <th>{{this.privilage}}</th>
-    <th>{{this.active}}</th>
-    <form action ="/edit/{{this._id}}" method="POST">  
-     <th><button type="submit">Edit</button></th>
-   </form>
-  </tr>
-{{/each}}
-</table>
+</div>
