--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -46,16 +46,16 @@
                     <ul>
                       {{#if currentUser.privi}}
                         <li><a href="/reports"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Reports</span></a></li>
-                        <li><a href="/dashboard"><i class="fa fa-bar-chart" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Users</span></a></li>
-                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
-                        <li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
-                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
+                        <li><a href="/dashboard"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Users</span></a></li>
+                        <li><a href="/printer"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Printers</span></a></li>
+                       <!--  <li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
+                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>-->
                       {{else}}
-                        <li><a href="/reports"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Service Centers</span></a></li>
-                        <li><a href="/users"><i class="fa fa-bar-chart" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
-                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
+                        <li><a href="/service-Center"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Service Centers</span></a></li>
+                        <li><a href="/warranty"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Warranty</span></a></li>
+                        <!-- <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
                         <li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
-                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>
+                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm"></span></a></li>-->
                       {{/if}}
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
                 </div>
             </div>
         </div>
-        
+
   {{else}}
       {{{body}}}   
   {{/if}}  
