--- a/views/call-log/newCall.hbs
+++ b/views/call-log/newCall.hbs
@@ -1,22 +1,17 @@
+<hr class="colorgraph">
+<div class="col-md-12 "><h1>CALL LOGS</h1></div>
+  <br><br><br>
+  <hr class="colorgraph">
 
 <div class="container">
-
     <div class="row">
-
-      <div class="col-lg-8 col-lg-offset-2">
-
-        
-        <form id="contact-form" action="/newCallog" method="POST" role="form">
-
-        <div class="messages"></div>
-
-        <div class="controls">
-
+      <div class="col-lg-12">
+       <form id="contact-form" action="/newCallog" method="POST" role="form">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label for="form_name">Printer *</label>
-                <select name="printer" class="form-control form-control-lg">
+                <label for="form_printer"><h4>Printer *</h4></label>
+                <select name="printer" class="form-control form-control-lg" aria-placeholder="Printer">
                     {{#each printerFromDB}}
                         <option value= {{this._id}}>{{this.printer}}</option>
                     {{/each}}
@@ -25,7 +20,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="form_lastname">Interface *</label>
+                <label for="form_interface"><h4>Interface *</h4></label>
                 <select name="interface" class="form-control form-control-lg">
                     <option value="Lan">Lan</option>
                     <option value="USB">USB</option>
@@ -41,7 +36,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label for="form_email">Device *</label>
+                <label for="form_device"><h4>Device *</h4></label>
                     <select name="device" class="form-control form-control-lg">
                         <option value="Windows">Windows</option>
                         <option value="Mac">Mac</option>
@@ -54,7 +49,7 @@
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="form_phone">POS</label>
+                <label for="form_pos"><h4>POS</h4></label>
                 <select name="pos" class="form-control form-control-lg">
                     <option value="None">None</option>
                     <option value="Square">Square</option>
@@ -90,7 +85,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <label for="form_message">Message *</label>
+                <label for="form_message"><h4>Observation*</h4></label>
                 <textarea id="form_message" name="observation" class="form-control" placeholder="Observation *" rows="4" required data-error="Please, Add the description."></textarea>
                 <div class="help-block with-errors"></div>
               </div>
@@ -98,23 +93,20 @@
             <div class="col-md-12">
               <input type="submit" class="btn btn-success btn-send" value="Submit">
             </div>
-          </div>
-         
-        </div>
-
+          </div>       
+        
         </form>
-
       </div>
-
     </div>
-
   </div>
 <br>
 <br>
 <br>
 <hr>
-<table id="customers" class="col-lg-8 col-lg-offset-2">
-    <tr>
+<table id="table" class="col-lg-12 table table-striped">
+  <thead>
+  
+   <tr>
         <h2>
             <th>DATE</th>
             <th>USERNAME</th>
@@ -126,7 +118,7 @@
             <th>DELETE</th>
         </h2>
     </tr>
-
+  </thead>  
     {{#each callsFromDB}}
         <tr>  
             <th>{{this.createdAt}}</th>
@@ -141,5 +133,5 @@
             </form>
         </tr> 
      {{/each}}
-
+  
 </table>
